--- a/internal/Makefile
+++ b/internal/Makefile
@@ -1,2 +1,5 @@
 image:
-	cd .. && docker build --platform linux/amd64 -t go-workshop:latest -f internal/Dockerfile .
+	cd .. && docker build --platform linux/amd64 -t $(REPO)/go-workshop:latest -f internal/Dockerfile .
+
+push:
+	docker push $(REPO)/go-workshop:latest
